Fixed margin overflow by chainging to padding.

--- a/Blend-exchangePHP/layout.css
+++ b/Blend-exchangePHP/layout.css
@@ -84,7 +84,7 @@ h1{
 }
 #logo {
    font-size:38pt;
-   margin-top: 70px;
+   padding-top: 70px;
 
 }
 .tagLine{
